--- a/mauiblazor/RecipeFriends/wwwroot/css/app.css
+++ b/mauiblazor/RecipeFriends/wwwroot/css/app.css
@@ -1,4 +1,7 @@
-﻿html, body {
+﻿@import url("google/google.css");
+@import url("microsoft/microsoft.css");
+
+html, body {
     font-family: 'Helvetica Neue', Helvetica, Arial, sans-serif;
 }
 
