Edit recipe with tabs

--- a/mauiblazor/RecipeFriends/Components/Pages/RecipeEdit.razor
+++ b/mauiblazor/RecipeFriends/Components/Pages/RecipeEdit.razor
@@ -13,7 +13,7 @@
     </TitleContent>
     <DialogContent>
         <div>
-        <MudContainer Style="max-height: 600px; overflow-y: scroll">
+        <MudContainer Style="height: 600px; overflow-y: scroll">
         @if (recipeDetails == null)
         {
             <p><em>Loading...</em></p>
@@ -25,12 +25,12 @@
                 <DataAnnotationsValidator />
                 <ValidationSummary />
 
-                <MudGrid Spacing="2" Justify="Justify.Center" >
-                    <MudItem xs="12">
+               <MudTabs Elevation="2" Rounded="true" ApplyEffectsToContainer="true" PanelClass="pa-6">
+                    <MudTabPanel Text="Properties">
                         <MudPaper Height="250px" xs="12" Class="pa-4">             
                             <div class="d-flex flex-column py-1">
                                 <MudTextField id="title" xs="8" @bind-Value="recipeDetails.Title" />                      
-                                <MudSelect id="category"  xs="4" T="CategoryInfo" Value="recipeDetails.Category">
+                                <MudSelect id="category"  xs="4" T="CategoryInfo" @bind-Value="recipeDetails.Category">
                                     @foreach (var cat in allCategories ?? Enumerable.Empty<CategoryInfo>())
                                     {
                                         <MudSelectItem Value="cat" />
@@ -39,59 +39,57 @@
                                 <TagBox AllTags="@allTags" RecipeTags="recipeDetails.Tags" ></TagBox>                                               
                             </div>
                         </MudPaper>
-                    </MudItem>
-                    <MudInputLabel>Short description</MudInputLabel>              
-                    <MudItem xs="12">                       
-                        <MudPaper Height="204px" xs="12">
-                            <MarkdownEditor MaxHeight="100px" @bind-Value="@recipeDetails.ShortDescription" HideIcons='@(new string[] { "code", "image", "link", "quote", "guide", "table" })'/>                        
-                        </MudPaper>                       
-                    </MudItem>
-                    <MudInputLabel>Description</MudInputLabel>
-                    <MudItem xs="12">
-                        <MudPaper Height="329px" xs="12">                        
-                            <MarkdownEditor MaxHeight="225px" @bind-Value="@recipeDetails.Description" HideIcons='@(new string[] { "code", "image", "link", "quote", "guide" })'/>                        
-                        </MudPaper>
-                    </MudItem>
-                    <MudInputLabel>Ingredients</MudInputLabel>
-                    <MudItem xs="12">
-                        <MudPaper Height="329px" xs="12">                       
-                            <MudDataGrid MaxHeight="225px" T="IngredientDetails" Items="@recipeDetails.Ingredients" 
-                                         EditMode="DataGridEditMode.Cell" EditTrigger="DataGridEditTrigger.OnRowClick"
-                                         ReadOnly="false"
-                                         Bordered="true" Dense="true">
-                                <ToolBarContent>
-                                    <MudButton OnClick="() => AddIngredient()" Color="@Color.Success" Class="add-item-btn">Add Item</MudButton>                                    
-                                </ToolBarContent>                                         
-                                <Columns>
-                                    <PropertyColumn Property="x => x.Order" Title="Order" SortBy="@_sortBy" />
-                                    <PropertyColumn Property="x => x.Name" Title="Name" />
-                                    <PropertyColumn Property="x => x.Amount" Title="Amount"  />
-                                    <PropertyColumn Property="x => x.Measurement" Title="Measurement" >
-                                        <EditTemplate Context="ingredient">
-                                            <MudSelect T="MeasurementInfo" @bind-Value="ingredient.Item.Measurement" Margin="@Margin.Dense">
-                                                @foreach(var measurement in allMeasurements){
-                                                    <MudSelectItem Value="measurement" />
-                                                }                                                        
-                                            </MudSelect> 
-                                        </EditTemplate>
-                                    </PropertyColumn>    
-                                </Columns>                       
-                            </MudDataGrid>                       
-                        </MudPaper>
-                    </MudItem>
-                    <MudInputLabel>Directions</MudInputLabel>
-                    <MudItem xs="12">
-                        <MudPaper Height="329px" xs="12">                       
-                            <MarkdownEditor MaxHeight="225px" @bind-Value="@recipeDetails.Directions" HideIcons='@(new string[] { "code", "image", "link", "quote", "guide" })'/>                       
-                        </MudPaper>
-                    </MudItem>
-                    <MudInputLabel>Notes</MudInputLabel>
-                    <MudItem xs="12">
-                        <MudPaper Height="329px" xs="12">                       
-                            <MarkdownEditor MaxHeight="225px" @bind-Value="@recipeDetails.Notes" HideIcons='@(new string[] { "code", "image", "link", "quote", "guide" })'/>                       
-                        </MudPaper>
-                    </MudItem>                         
-                </MudGrid>          
+                    </MudTabPanel>
+                    <MudTabPanel Text="Description">
+                        <MudInputLabel>Short description</MudInputLabel>                                        
+                            <MudPaper Height="204px" xs="12">
+                                <MarkdownEditor MaxHeight="100px" @bind-Value="@recipeDetails.ShortDescription" HideIcons='@(new string[] { "code", "image", "link", "quote", "guide", "table" })'/>                        
+                            </MudPaper>
+                        <MudInputLabel>Description</MudInputLabel>                        
+                            <MudPaper Height="329px" xs="12">                        
+                                <MarkdownEditor MaxHeight="225px" @bind-Value="@recipeDetails.Description" HideIcons='@(new string[] { "code", "image", "link", "quote", "guide" })'/>                        
+                            </MudPaper>                       
+                    </MudTabPanel>
+                    <MudTabPanel Text="Ingredients">
+                            <MudPaper Height="329px" xs="12">                       
+                                <MudDataGrid MaxHeight="225px" T="IngredientDetails" Items="@recipeDetails.Ingredients" 
+                                            EditMode="DataGridEditMode.Cell" EditTrigger="DataGridEditTrigger.OnRowClick"
+                                            ReadOnly="false"
+                                            Bordered="true" Dense="true"
+                                            RowsPerPage="5">
+                                    <ToolBarContent>
+                                        <MudButton OnClick="() => AddIngredient()" Color="@Color.Success" Class="add-item-btn">Add Item</MudButton>                                    
+                                    </ToolBarContent>                                         
+                                    <Columns>
+                                        <PropertyColumn Property="x => x.Order" Title="Order" SortBy="@_sortBy" />
+                                        <PropertyColumn Property="x => x.Name" Title="Name" />
+                                        <PropertyColumn Property="x => x.Amount" Title="Amount"  />
+                                        <PropertyColumn Property="x => x.Measurement" Title="Measurement" >
+                                            <EditTemplate Context="ingredient">
+                                                <MudSelect T="MeasurementInfo" @bind-Value="ingredient.Item.Measurement" Margin="@Margin.Dense">
+                                                    @foreach(var measurement in allMeasurements){
+                                                        <MudSelectItem Value="measurement" />
+                                                    }                                                        
+                                                </MudSelect> 
+                                            </EditTemplate>
+                                        </PropertyColumn>    
+                                    </Columns>                       
+                                </MudDataGrid>                       
+                            </MudPaper>
+                    </MudTabPanel>
+                    <MudTabPanel Text="Directions">
+                        
+                            <MudPaper Height="329px" xs="12">                       
+                                <MarkdownEditor MaxHeight="225px" @bind-Value="@recipeDetails.Directions" HideIcons='@(new string[] { "code", "image", "link", "quote", "guide" })'/>                       
+                            </MudPaper>
+                        
+                    </MudTabPanel>
+                    <MudTabPanel Text="Notes">                        
+                            <MudPaper Height="329px" xs="12">                       
+                                <MarkdownEditor MaxHeight="225px" @bind-Value="@recipeDetails.Notes" HideIcons='@(new string[] { "code", "image", "link", "quote", "guide" })'/>                       
+                            </MudPaper>                        
+                    </MudTabPanel>                     
+                </MudTabs>          
             </EditForm>
             @if (!string.IsNullOrEmpty(saveStatusMessage))
             {
